# powsybl-core

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  THIRD-PARTY.properties  THIRD-PARTY.txt  appveyor.yml  checkstyle.xml  header.txt  id_rsa_gandi.enc  install.sh  logback-cmdline.xml  logback_wp5.xml  mvnw  pom.xml  proposal.md  runt  script.sh  test.sh  travis-maven.xml
EU2Mod_MB/: pom.xml
action/: pom.xml
action-api/: pom.xml
action-ial/: pom.xml
afs/: GettingStarted.md  README.md  pom.xml
ampl-converter/: pom.xml
ampl-executor/: pom.xml
ampl-export/: pom.xml
bom/: pom.xml
case-repository/: pom.xml
cgmes/: pom.xml
cim-anonymiser/: dependency-reduced-pom.xml  pom.xml
cim1/: pom.xml
cim1-converter/: pom.xml
cim1-import/: pom.xml
cim1-model/: pom.xml
cmake/: FindDymola.cmake  FindEurostag.cmake  FindHDF5.cmake  FindIntelFortran.cmake  FindLibArchive.cmake  FindLog4cpp.cmake  FindMatio.cmake  FindMatlab.cmake  FindProtobuf.cmake  FindSuiteSparse.cmake
commons/: pom.xml
commons-test/: pom.xml
computation/: pom.xml
computation-local/: pom.xml
computation-local-test/: pom.xml
computation-mpi/: pom.xml
computation-mpi-util/: pom.xml
config/: logback-cmdline.xml  logback-wp5.xml  logback.xml
config-classic/: pom.xml
config-test/: pom.xml
connectable-switches-collapser/: pom.xml
contingency/: pom.xml
contingency-api/: pom.xml
dataframe/: pom.xml
distribution/: pom.xml
distribution-core/: pom.xml
docs/: .readthedocs.yaml  Makefile  README.md  conf.py  geographical_data.md  getting-started.md  index.md  index.rst  requirements.txt
dsl/: pom.xml
dymola-adapter/: CMakeLists.txt  compile_matlab.sh
dymola-adapter/sources/: wp43_dymola.sh  wp43dymadapter_overload.m  wp43dymadapter_smallsignal.m  wp43dymadapter_transient.m  wp43dymadapter_underovervoltage.m
dymola-integration/: .gitignore  pom.xml
dymola-proxyservice/: .gitignore  install.sh  pom.xml
dynamic-indexes/: CMakeLists.txt
dynamic-indexes/1_Static_Overload/: compile_matlab.sh
dynamic-indexes/1_Static_Overload/sources/: overload_HELPER.m  static_overload.m  static_overload_index_testing.m
dynamic-indexes/2_Static_UnderOver_Voltage/: compile_matlab.sh
dynamic-indexes/2_Static_UnderOver_Voltage/sources/: static_voltage.m  static_voltage_index_testing.m  underovervoltage_HELPER.m
dynamic-indexes/3_Dynamic_Transient/: compile_matlab.sh
dynamic-indexes/3_Dynamic_Transient/sources/: dynamic_transient.m  dynamic_transient_index_testing.m  transient_HELPER.m
dynamic-indexes/4_Dynamic_SmallSignal/: compile_matlab.sh
dynamic-indexes/4_Dynamic_SmallSignal/sources/: Dynamic_smallsignal_example.m  pronyiTesla.m  signal_filter.m  smallsignal_HELPER.m  sssi.m
dynamic-security-analysis/: pom.xml
dynamic-simulation/: pom.xml
entsoe-case-repository/: pom.xml
entsoe-util/: pom.xml
eurostag-ech-export/: pom.xml
eurostag-indexes/: CMakeLists.txt
eurostag-indexes/src/: EurostagApiException.hpp  EurostagTimeSeries.cpp  EurostagTimeSeries.h  TimeSeries.cpp  TimeSeries.h  tsextract.cpp  tsoindexes.cpp
eurostag-integration/: pom.xml
eurostag-network/: pom.xml
eurostag-step-up-transformer/: pom.xml
file-system-rules-db/: pom.xml
fpf-integration/: pom.xml
graph/: pom.xml
histoDB/: pom.xml
histodb-client/: pom.xml
ieee-cdf/: pom.xml
iidm/: pom.xml
iidm-actions-contingencies-xml-client/: pom.xml
iidm-api/: pom.xml
iidm-converter-api/: pom.xml
iidm-ddb/: pom.xml  readme.txt
iidm-groovy-extension/: pom.xml
iidm-impl/: pom.xml
iidm-import-export-api/: pom.xml
iidm-network-api/: pom.xml
iidm-network-impl/: pom.xml
iidm-network-test/: pom.xml
iidm-test/: pom.xml
iidm-xml-converter/: pom.xml
iidm-xml-import-export/: pom.xml
itools-packager/: README.md  pom.xml
itools-plugin/: pom.xml
jni-util/: CMakeLists.txt
jni-util/src/: jniwrapper.cpp  jniwrapper.hpp
loadflow/: pom.xml
loadflow-api/: pom.xml
loadflow-validation/: pom.xml
math/: pom.xml
math-jni/: CMakeLists.txt
math-jni/src/: lu.cpp
matpower/: pom.xml
mcla/: CMakeLists.txt  compile_matlab_fea.sh  compile_matlab_mcla.sh
mcla-integration/: pom.xml
mcla/sources/: FEA_MODULE1_HELPER.m  FEA_MODULE2_HELPER.m  FEA_MODULE2_REDUCE_HELPER.m  FPF_HELPER.m  MCLA_HELPER.m  MODULE0.m  MODULE1.m  MODULE1_HELPER.m  MODULE1_HELPERS.m  MODULE2.m  MODULE2_HELPERS.m  MODULE2_OUTPUT.m  MODULE2_OUTPUT2.m  MODULE3.m  MODULE3PRE_HELPERS.m  MODULE3_HELPER.m  MODULE3_HELPERS.m  MODULE3_SINGLE.m  NEW_PIT.m  SAMPLING_MODULE3_HELPER.m  TEST_MCLA.m  TEST_Q2.m  analysis.m  bisection.m  calcolo_inv_mat_perFPF.m  carica_DB.m  check_distrizuione.m  check_validation_data.m  chi_pval.m  closest_corr.m  conditional_samps.m  copulachoose.m  datacorrige2.m  delays_forecast.m  estract_cdf.m  filtra_negativePoshigh.m  funzione.m  funzioneB.m  gausmix3.m  gaussian_conditional.m  (+20 more)
mmap-offline-db/: pom.xml
modelica-events-adder/: pom.xml
modelica-export/: pom.xml  readme.md
modules/: pom.xml
mpi-communication/: CMakeLists.txt
mpi-communication/src/: ioutil.cpp  ioutil.hpp  jniutil.cpp  jniutil.hpp  master.cpp  messages.pb.cc  messages.pb.h  mpitags.cpp  mpitags.hpp  mpiutil.cpp  mpiutil.hpp  slave.cpp
network-merge/: pom.xml
network-modification/: pom.xml
offline-mpi/: pom.xml
offline-server/: customs.json  pom.xml
offline-workflow/: pom.xml
online-mpi/: pom.xml
online-server/: pom.xml  readme.txt
online-workflow/: pom.xml
pclfsim-integration/: pom.xml
powerfactory/: pom.xml
sampling/: CMakeLists.txt  compile_matlab.sh
sampling/sources/: AGGREGATOR.m  AGGREGATORS.m  MODULE1.m  MODULE1_HELPER.m  MODULE1_HELPERS.m  MODULE2.m  MODULE2_HELPER.m  MODULE2_HELPERS.m  MODULE3.m  MODULE3PRE_HELPERS.m  MODULE3_HELPER.m  MODULE3_HELPERS.m  NEW_PIT.m  SCRIPT.m  SCRIPTQ.m  copulaName.m  h.m  h_inv_ex.m  insert_ind.m  modR.m  modU.m  mod_data.m  modelSummary.m
wp43adapter/: CMakeLists.txt  readme.txt
wp43adapter/src/: Chameleon.cpp  Chameleon.h  ConfigFile.cpp  ConfigFile.h  wp43_eurostag.sh  wp43adapter.cpp  wp43adapter.properties
(+16916 files in other folders)
