# Copyright (c) 2016, RTE (http://www.rte-france.com)
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

find_package(Matlab REQUIRED)

set(MATLAB_INCLUDE_DIRECTORIES
    stats
)

set(MATLAB_RUNTIME_OPTIONS
	-nojvm
	-nodisplay
	-nosplash
)

set(MATLAB_WARNING_OPTIONS
	enable:specified_file_mismatch
	enable:repeated_file
	enable:switch_ignored
	enable:missing_lib_sentinel
	enable:demo_license
)

set(WP5FEA_M1_SOURCES
	sources/FEA_MODULE1_HELPER.m 
	sources/analysis.m 
	sources/bisection.m 
	sources/carica_DB.m 
	sources/check_distrizuione.m 
	sources/chi_pval.m 
	sources/closest_corr.m 
	sources/conditional_samps.m 
	sources/copulaName.m 
	sources/copulachoose.m 
	sources/datacorrige2.m 
	sources/estract_cdf.m 
	sources/funzioneB.m 
	sources/funzione.m 
	sources/gausmix3.m 
	sources/gaussian_conditional.m 
	sources/gaussian_mixture.m 
	sources/h_gumbel.m 
	sources/h_inv_ex.m 
	sources/h_inv.m 
	sources/h.m 
	sources/h_pit.m 
	sources/inversion_with_verify2.m 
	sources/invfunzioneB.m 
	sources/licols.m 
	sources/main.m 
	sources/main_MCLA2PC3.m 
	sources/map_ecdf.m 
	sources/MCLA_HELPER.m 
	sources/mod_data.m 
	sources/modelSummary.m 
	sources/modR.m 
	sources/MODULE0.m 
	sources/MODULE1_HELPER.m 
	sources/MODULE1_HELPERS.m 
	sources/MODULE1.m 
	sources/MODULE2_HELPER.m 
	sources/MODULE2_HELPERS.m 
	sources/MODULE2.m 
	sources/MODULE2_OUTPUT2.m 
	sources/MODULE2_OUTPUT.m 
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m 
	sources/MODULE3.m 
	sources/MODULE3PRE_HELPERS.m 
	sources/MODULE3_SINGLE.m 
	sources/modU.m 
	sources/new_method_imputation4.m 
	sources/new_method_imputation.m 
	sources/NEW_PIT.m 
	sources/pictures.m 
	sources/rand_gen.m 
	sources/run_module3.m 
	sources/sQuantile.m 
	sources/stimaposdef.m 
	sources/testfilterings2.m 
	sources/trova_closest.m
)
add_matlab_executable(wp5fea_m1 "${WP5FEA_M1_SOURCES}")

set(WP5FEA_M2_SOURCES
	sources/FEA_MODULE2_HELPER.m 
	sources/analysis.m 
	sources/bisection.m 
	sources/carica_DB.m 
	sources/check_distrizuione.m 
	sources/chi_pval.m 
	sources/closest_corr.m 
	sources/conditional_samps.m 
	sources/copulaName.m 
	sources/copulachoose.m 
	sources/datacorrige2.m 
	sources/estract_cdf.m 
	sources/funzioneB.m 
	sources/funzione.m 
	sources/gausmix3.m 
	sources/gaussian_conditional.m 
	sources/gaussian_mixture.m 
	sources/h_gumbel.m 
	sources/h_inv_ex.m 
	sources/h_inv.m 
	sources/h.m 
	sources/h_pit.m 
	sources/inversion_with_verify2.m 
	sources/invfunzioneB.m 
	sources/licols.m 
	sources/main.m 
	sources/main_MCLA2PC3.m 
	sources/map_ecdf.m 
	sources/MCLA_HELPER.m 
	sources/mod_data.m 
	sources/modelSummary.m 
	sources/modR.m 
	sources/MODULE0.m 
	sources/MODULE1_HELPER.m 
	sources/MODULE1_HELPERS.m 
	sources/MODULE1.m 
	sources/MODULE2_HELPER.m 
	sources/MODULE2_HELPERS.m 
	sources/MODULE2.m 
	sources/MODULE2_OUTPUT2.m 
	sources/MODULE2_OUTPUT.m 
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m 
	sources/MODULE3.m 
	sources/MODULE3PRE_HELPERS.m 
	sources/MODULE3_SINGLE.m 
	sources/modU.m 
	sources/new_method_imputation4.m 
	sources/new_method_imputation.m 
	sources/NEW_PIT.m 
	sources/pictures.m 
	sources/rand_gen.m 
	sources/run_module3.m 
	sources/sQuantile.m 
	sources/stimaposdef.m 
	sources/testfilterings2.m 
	sources/trova_closest.m
)
add_matlab_executable(wp5fea_m2 "${WP5FEA_M2_SOURCES}")

set(WP5FEA_M2_REDUCE_SOURCES
	sources/FEA_MODULE2_REDUCE_HELPER.m
	sources/analysis.m
	sources/bisection.m
	sources/carica_DB.m
	sources/check_distrizuione.m
	sources/chi_pval.m
	sources/closest_corr.m
	sources/conditional_samps.m
	sources/copulaName.m
	sources/copulachoose.m
	sources/datacorrige2.m
	sources/estract_cdf.m
	sources/funzioneB.m
	sources/funzione.m
	sources/gausmix3.m
	sources/gaussian_conditional.m
	sources/gaussian_mixture.m
	sources/h_gumbel.m
	sources/h_inv_ex.m
	sources/h_inv.m
	sources/h.m
	sources/h_pit.m
	sources/inversion_with_verify2.m
	sources/invfunzioneB.m
	sources/licols.m
	sources/main.m
	sources/main_MCLA2PC3.m
	sources/map_ecdf.m
	sources/MCLA_HELPER.m
	sources/mod_data.m
	sources/modelSummary.m
	sources/modR.m
	sources/MODULE0.m
	sources/MODULE1_HELPER.m
	sources/MODULE1_HELPERS.m
	sources/MODULE1.m
	sources/MODULE2_HELPER.m
	sources/MODULE2_HELPERS.m
	sources/MODULE2.m
	sources/MODULE2_OUTPUT2.m
	sources/MODULE2_OUTPUT.m
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m
	sources/MODULE3.m
	sources/MODULE3PRE_HELPERS.m
	sources/MODULE3_SINGLE.m
	sources/modU.m
	sources/new_method_imputation4.m
	sources/new_method_imputation.m
	sources/NEW_PIT.m
	sources/pictures.m
	sources/rand_gen.m
	sources/run_module3.m
	sources/sQuantile.m
	sources/stimaposdef.m
	sources/testfilterings2.m
	sources/trova_closest.m
)
add_matlab_executable(wp5fea_m2_reduce "${WP5FEA_M2_REDUCE_SOURCES}")

set(WP5FEA_M3_SAMPLING_SOURCES
	sources/SAMPLING_MODULE3_HELPER.m
	sources/analysis.m
	sources/bisection.m
	sources/carica_DB.m
	sources/check_distrizuione.m
	sources/chi_pval.m
	sources/closest_corr.m
	sources/conditional_samps.m
	sources/copulaName.m
	sources/copulachoose.m
	sources/datacorrige2.m
	sources/estract_cdf.m
	sources/funzioneB.m
	sources/funzione.m
	sources/gausmix3.m
	sources/gaussian_conditional.m
	sources/gaussian_mixture.m
	sources/h_gumbel.m
	sources/h_inv_ex.m
	sources/h_inv.m
	sources/h.m
	sources/h_pit.m
	sources/inversion_with_verify2.m
	sources/invfunzioneB.m
	sources/licols.m
	sources/main.m
	sources/main_MCLA2PC3.m
	sources/map_ecdf.m
	sources/MCLA_HELPER.m
	sources/mod_data.m
	sources/modelSummary.m
	sources/modR.m
	sources/MODULE0.m
	sources/MODULE1_HELPER.m
	sources/MODULE1_HELPERS.m
	sources/MODULE1.m
	sources/MODULE2_HELPER.m
	sources/MODULE2_HELPERS.m
	sources/MODULE2.m
	sources/MODULE2_OUTPUT2.m
	sources/MODULE2_OUTPUT.m
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m
	sources/MODULE3.m
	sources/MODULE3PRE_HELPERS.m
	sources/MODULE3_SINGLE.m
	sources/modU.m
	sources/new_method_imputation4.m
	sources/new_method_imputation.m
	sources/NEW_PIT.m
	sources/pictures.m
	sources/rand_gen.m
	sources/run_module3.m
	sources/sQuantile.m
	sources/stimaposdef.m
	sources/testfilterings2.m
	sources/trova_closest.m
)
add_matlab_executable(wp5fea_m3_sampling "${WP5FEA_M3_SAMPLING_SOURCES}")

set(WP5MCLA_SOURCES
	sources/MCLA_HELPER.m
	sources/analysis.m
	sources/bisection.m
	sources/carica_DB.m
	sources/check_distrizuione.m
	sources/chi_pval.m
	sources/closest_corr.m
	sources/conditional_samps.m
	sources/copulaName.m
	sources/copulachoose.m
	sources/datacorrige2.m
	sources/estract_cdf.m
	sources/funzioneB.m
	sources/funzione.m
	sources/gausmix3.m
	sources/gaussian_conditional.m
	sources/gaussian_mixture.m
	sources/h_gumbel.m
	sources/h_inv_ex.m
	sources/h_inv.m
	sources/h.m
	sources/h_pit.m
	sources/inversion_with_verify2.m
	sources/invfunzioneB.m
	sources/licols.m
	sources/main.m
	sources/main_MCLA2PC3.m
	sources/map_ecdf.m
	sources/MCLA_HELPER.m
	sources/mod_data.m
	sources/modelSummary.m
	sources/modR.m
	sources/MODULE0.m
	sources/MODULE1_HELPER.m
	sources/MODULE1_HELPERS.m
	sources/MODULE1.m
	sources/MODULE2_HELPER.m
	sources/MODULE2_HELPERS.m
	sources/MODULE2.m
	sources/MODULE2_OUTPUT2.m
	sources/MODULE2_OUTPUT.m
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m
	sources/MODULE3.m
	sources/MODULE3PRE_HELPERS.m
	sources/MODULE3_SINGLE.m
	sources/modU.m
	sources/new_method_imputation4.m
	sources/new_method_imputation.m
	sources/NEW_PIT.m
	sources/pictures.m
	sources/rand_gen.m
	sources/run_module3.m
	sources/sQuantile.m
	sources/stimaposdef.m
	sources/testfilterings2.m
	sources/trova_closest.m
)
add_matlab_executable(wp5mcla "${WP5MCLA_SOURCES}")

set(WP5FPF_SOURCES
	sources/FPF_HELPER.m
	sources/analysis.m
	sources/bisection.m
	sources/carica_DB.m
	sources/check_distrizuione.m
	sources/chi_pval.m
	sources/closest_corr.m
	sources/conditional_samps.m
	sources/copulaName.m
	sources/copulachoose.m
	sources/datacorrige2.m
	sources/estract_cdf.m
	sources/funzioneB.m
	sources/funzione.m
	sources/gausmix3.m
	sources/gaussian_conditional.m
	sources/gaussian_mixture.m
	sources/h_gumbel.m
	sources/h_inv_ex.m
	sources/h_inv.m
	sources/h.m
	sources/h_pit.m
	sources/inversion_with_verify2.m
	sources/invfunzioneB.m
	sources/licols.m
	sources/main.m
	sources/main_MCLA2PC3.m
	sources/map_ecdf.m
	sources/MCLA_HELPER.m
	sources/mod_data.m
	sources/modelSummary.m
	sources/modR.m
	sources/MODULE0.m
	sources/MODULE1_HELPER.m
	sources/MODULE1_HELPERS.m
	sources/MODULE1.m
	sources/MODULE2_HELPER.m
	sources/MODULE2_HELPERS.m
	sources/MODULE2.m
	sources/MODULE2_OUTPUT2.m
	sources/MODULE2_OUTPUT.m
	sources/MODULE3_HELPER.m
	sources/MODULE3_HELPERS.m
	sources/MODULE3.m
	sources/MODULE3PRE_HELPERS.m
	sources/MODULE3_SINGLE.m
	sources/modU.m
	sources/new_method_imputation4.m
	sources/new_method_imputation.m
	sources/NEW_PIT.m
	sources/pictures.m
	sources/rand_gen.m
	sources/run_module3.m
	sources/sQuantile.m
	sources/stimaposdef.m
	sources/testfilterings2.m
	sources/trova_closest.m
)
add_matlab_executable(wp5fpf "${WP5FPF_SOURCES}")

add_custom_target(mcla ALL
     COMMENT "building MCLA matlab binaries to ${EXECUTABLE_OUTPUT_PATH}"
     DEPENDS wp5fea_m1 wp5fea_m2 wp5fea_m2_reduce wp5fea_m3_sampling wp5mcla wp5fpf
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5fea_m1 ${EXECUTABLE_OUTPUT_PATH}
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5fea_m2 ${EXECUTABLE_OUTPUT_PATH}
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5fea_m2_reduce ${EXECUTABLE_OUTPUT_PATH}
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5fea_m3_sampling ${EXECUTABLE_OUTPUT_PATH}
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5mcla ${EXECUTABLE_OUTPUT_PATH}
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/wp5fpf ${EXECUTABLE_OUTPUT_PATH}
)
