# Copyright (c) 2016, All partners of the iTesla project (http://www.itesla-project.eu/consortium)
# Copyright (c) 2016, RTE (http://www.rte-france.com)
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

cmake_minimum_required(VERSION 2.6)

project(mpi)

set(CMAKE_CXX_COMPILER mpicxx)

if (DEFINED PROTOBUF_HOME)
    message("PROTOBUF_HOME=${PROTOBUF_HOME}")
else()
    message(FATAL_ERROR "PROTOBUF_HOME is NOT defined")
endif()
if (DEFINED BOOST_HOME)
    message("BOOST_HOME=${BOOST_HOME}")
else()
    message(FATAL_ERROR "BOOST_HOME is NOT defined")
endif()
if (DEFINED LOG4CPP_HOME)
    message("LOG4CPP_HOME=${LOG4CPP_HOME}")
else()
    message(FATAL_ERROR "LOG4CPP_HOME is NOT defined")
endif()
if (DEFINED LIBARCHIVE_HOME)
    message("LIBARCHIVE_HOME=${LIBARCHIVE_HOME}")
else()
    message(FATAL_ERROR "LIBARCHIVE_HOME is NOT defined")
endif()
if (DEFINED ENV{JAVA_HOME})
    message("JAVA_HOME=$ENV{JAVA_HOME}")
else()
    message(FATAL_ERROR "JAVA_HOME is NOT defined")
endif()

ADD_LIBRARY(boost_filesystem STATIC IMPORTED)
ADD_LIBRARY(boost_system STATIC IMPORTED)
ADD_LIBRARY(boost_iostreams STATIC IMPORTED)
ADD_LIBRARY(boost_program_options STATIC IMPORTED)
ADD_LIBRARY(log4cpp STATIC IMPORTED)
ADD_LIBRARY(protobuf STATIC IMPORTED)
ADD_LIBRARY(archive STATIC IMPORTED)
SET_TARGET_PROPERTIES(boost_filesystem PROPERTIES IMPORTED_LOCATION ${BOOST_HOME}/lib/libboost_filesystem.a)
SET_TARGET_PROPERTIES(boost_system PROPERTIES IMPORTED_LOCATION ${BOOST_HOME}/lib/libboost_system.a)
SET_TARGET_PROPERTIES(boost_iostreams PROPERTIES IMPORTED_LOCATION ${BOOST_HOME}/lib/libboost_iostreams.a)
SET_TARGET_PROPERTIES(boost_program_options PROPERTIES IMPORTED_LOCATION ${BOOST_HOME}/lib/libboost_program_options.a)
SET_TARGET_PROPERTIES(log4cpp PROPERTIES IMPORTED_LOCATION ${LOG4CPP_HOME}/lib/liblog4cpp.a)
SET_TARGET_PROPERTIES(protobuf PROPERTIES IMPORTED_LOCATION ${PROTOBUF_HOME}/lib/libprotobuf.a)
SET_TARGET_PROPERTIES(archive PROPERTIES IMPORTED_LOCATION ${LIBARCHIVE_HOME}/lib/libarchive.a)

include_directories($ENV{JAVA_HOME}/include $ENV{JAVA_HOME}/include/linux ${BOOST_HOME}/include ${PROTOBUF_HOME}/include ${LOG4CPP_HOME}/include ${LIBARCHIVE_HOME}/include)
link_directories(${PROTOBUF_HOME}/lib)
add_library(common src/mpiutil.cpp src/ioutil.cpp src/mpitags.cpp)
add_library(master SHARED src/master.cpp src/jniutil.cpp)
add_executable(slave src/slave.cpp src/messages.pb.cc)
target_link_libraries(master common boost_filesystem boost_system boost_iostreams log4cpp archive)
target_link_libraries(slave common boost_program_options boost_filesystem boost_system boost_iostreams log4cpp archive protobuf z bz2)
